# my-django-project-shopapp

./: .env.template  Dockerfile  docker-compose.yml
mysite/: log.txt  pyproject.toml  requirements.txt
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/fixtures/: blog_fixtures.json
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_user.py
mysite/myauth/templates/myauth/: about-me.html  profile-update.html  user-detail.html  users-list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/new_blogapp_rss/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
mysite/new_blogapp_rss/migrations/: 0001_initial.py
mysite/new_blogapp_rss/templates/new_blogapp_rss/: article_detail.html  article_list.html
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: full-fixture.json  groups-fixture.json  orders-fixtures.json  products-fixtute.json  shopapp-products.xml  user-fixtures.json
mysite/shopapp/management/commands/: aggregation.py  allow_creation.py  (+7 more)
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_order_options_alter_product_options.py  0008_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimages.py  0012_alter_order_options_alter_product_options_and_more.py
(+16 files in other folders)
