[project]
name = "shopapp"
version = "0.1.0"
description = "Skillbox educational project"
authors = [
    {name = "Aleksandr Tananov",email = "afrika8759116@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
