[project]
name = "shopapp"
version = "0.1.0"
description = "Skillbox educational project"
authors = [
    {name = "Aleksandr Tananov",email = "afrika8759116@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "drf-yasg (>=1.21.14,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sentry-sdk (>=2.50.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "faker (>=40.1.2,<41.0.0)"
]
